# GY5021

./: GY5021_Data_Types.ipynb  GY5021_Vector_data.ipynb  README.md  pyproject.toml  requirements.txt
GY5021/1_Introduction_to_Geospatial_Data/: GY5021_1_Geospatial_Software_and_Programming_Languages.ipynb  GY5021_2_Data_Types.ipynb  GY5021_3_Vector_Data.ipynb  GY5021_3_Vector_data.ipynb  GY5021_4_Attribute_Data.ipynb  GY5021_4_Attribute_data.ipynb  GY5021_5_Coordinate_Reference_Systems.ipynb  GY5021_6_Geospatial_Data_Files.ipynb  GY5021_7_Vector_Geoprocessing.ipynb  GY5021_Getting_Started_Seriously_With_Python.ipynb  GY5021_The_Python_Language.ipynb
GY5021/1_Introduction_to_Geospatial_Data/sample_data/: LatLongGrid.gpkg  LimerickMetropolitan.arrow  LimerickMetropolitan.gpkg  Limerick_Bus_Stops.gpkg  WorldBorders.gpkg  ap.csv  ap.dbf  ap.feather  ap.geojson  ap.gpkg  ap.parquet  ap.shp  ap.shx  bbox.gpkg  land.gpkg  limerick_metropolitan.parquet  ocean.gpkg  tissot.gpkg
GY5021/2_Raster_Geospatial_Data/: GY5021_10_Multi-band_Raster_Data-Passive_Remote_Sensing.ipynb  GY5021_11_Multi-band_Raster_Data-Active_Remote_Sensing.ipynb  GY5021_8_Introduction_To_Raster_Data.ipynb  GY5021_9_Single-band_Raster_Data.ipynb
GY5021/2_Raster_Geospatial_Data/sample_data/Killarney/: 2021-04-25_11-46-59_Sentinel-2_L2A_B01.tiff  2021-04-25_11-46-59_Sentinel-2_L2A_B02.tiff  DEM_COPERNICUS_30.tiff  (+21 more)
GY5021/3_Spatial_and_Temporal_Change/: GY5021_11_Temporal_Change-Active_Remote_Sensing.ipynb  GY5021_12_Temporal_Change-Census_Data.ipynb  GY5021_13_Spatial_Change-Moving_Features.ipynb
(+13 files in other folders)
